# ublox_ubx_arrow

./: .gitignore  README.md
colcon_ws/src/ublox_ubx_arrow/: package.xml
colcon_ws/src/ublox_ubx_arrow_sink_node/: CMakeLists.txt
colcon_ws/src/ublox_ubx_arrow_sink_node/include/ublox_ubx_arrow_sink_node/: arrow.hpp  arrow_writer.hpp  visibility_control.h
colcon_ws/src/ublox_ubx_arrow_sink_node/src/: arrow_sink_node.cpp
data/: ubx_nav_hp_pos_llh_20210717180805.parquet
notebooks/: ubx_nav_hpposllh_parquet_exploration.ipynb
ublox_ubx_arrow/: CMakeLists.txt
ublox_ubx_arrow_sink_node/: CMakeLists.txt  package.xml
ublox_ubx_arrow_sink_node/CMake/: FindZstd.cmake
ublox_ubx_arrow_sink_node/include/ublox_ubx_arrow_sink_node/: arrow.hpp  arrow_writer.hpp
ublox_ubx_arrow_sink_node/src/: arrow_sink_node.cpp
ublox_ubx_arrow_sink_node/test/: test_arrow_writer.cpp
