<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ublox_ubx_arrow_sink_node</name>
  <version>0.0.0</version>
  <description>Sink to arrow parquet files, ros2 ubx messages</description>
  <maintainer email="nick@arst.com.au">nick</maintainer>
  <license>Apache Licesnse, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ublox_ubx_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
