<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ublox_ubx_arrow</name>
  <version>0.0.0</version>
  <description>Utilities for converting ros2 ubx messages into Apache Arrow parquet files</description>
  <maintainer email="nick@arst.com.au">nick</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ublox_ubx_msgs</exec_depend>
  <exec_depend>ublox_ubx_arrow_sink_node</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
